fixed scrollbar bug for description item animation

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: space-between;
   position: relative;
+  overflow: hidden;
 }
 .top{
   width: 100%;
