--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -68,21 +68,43 @@
   z-index: -1;
 }
 
-.description{
+.description {
   max-width: 50%;
+  position: relative;
 }
 .description-paragraph{
+  --padding-x: 10px;
+  --padding-y: 15px;
+  --margin: 10px;
   font-size: 18px;
-  padding: 5px 10px;
-  margin: 10px;
+  padding: var(--padding-y) var(--padding-x);
+  margin: var(--margin);
   background-color: var(--secondary-dark);
   border-radius: 5px;
-  transform: translateY(200px);
+  text-align: left;
+}
+.description-paragraph.container{
+  position: relative;
+  color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
+  border-color: rgba(0, 0, 0, 0);
+}
+.description-paragraph.animation{
+  --starting-x: 0px;
+  --starting-y: 200px;
+  position: absolute;
+  right: calc(var(--starting-x) - var(--margin));
+  top:   calc(var(--starting-y) - var(--margin));
+  width: calc(100% - (var(--padding-x) * 2));
   opacity: 0;
-  transition: transform .75s, opacity .75s;
+  transition: transform 75s, opacity .75s;
+
+  transition: top .75s, opacity .75s;
 }
 .description-paragraph.animated{
-  transform: translateY(0);
+  top:   calc(-1 * var(--margin));
+  right: calc(-1 * var(--margin));
+  clip-path: inset(0 0 0 0);
   opacity: 1;
 }
 
